[tool.poetry]
name = "langchain-agent-streamlit-demo"
version = "0.1.0"
description = ""
authors = ["zwe-htet-paing <zwehtetpaing.works@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
accelerate = "^0.29.2"
bitsandbytes = "^0.43.1"
transformers = "^4.39.3"
wikipedia = "^1.4.0"
numexpr = "^2.10.0"
langchain-community = "^0.0.33"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
